import "KeyValue.proto";


option java_outer_classname="SearchCommandProtocol";
package Alachisoft.NCache.Common.Protobuf;

message SearchCommand {
    optional string query = 1;
    repeated KeyValue values = 2;
    optional bool searchEntries = 3;
	optional int64 requestId = 4;
}